src/gcl/Parser.java
package gcl;

public class Parser {
// GCL Version 2011
	public static final int _EOF = 0;
	public static final int _identifier = 1;
	public static final int _numeral = 2;
	public static final int _stringConstant = 3;
	public static final int maxT = 56;
	public static final int _option1 = 57;
	public static final int _option3 = 58;
	public static final int _option5 = 59;
	public static final int _option6 = 60;
	public static final int _option7 = 61;
	public static final int _option9 = 62;
	public static final int _option10 = 63;

	static final boolean T = true;
	static final boolean x = false;
	static final int minErrDist = 2;

	public Token t;    // last recognized token
	public Token la;   // lookahead token
	int errDist = minErrDist;
	
	private Scanner scanner;
	private Errors errors;

	static final boolean DIRECT = CodegenConstants.DIRECT;
		static final boolean INDIRECT = CodegenConstants.INDIRECT;
		IntegerType integerType = SemanticActions.INTEGER_TYPE;
		BooleanType booleanType = SemanticActions.BOOLEAN_TYPE;
		TypeDescriptor noType = SemanticActions.NO_TYPE;

/*==========================================================*/


	public Parser(Scanner scanner, SemanticActions actions, SemanticActions.GCLErrorStream err) {
		this.scanner = scanner;
		this.semantic = actions;
		errors = err;
		this.err = err;
	}
	
	private SemanticActions semantic;
	private SemanticActions.GCLErrorStream err;
	
	public Scanner scanner(){
		return scanner;
	}
	
	public Token currentToken(){return t;}

	void SynErr (int n) {
		if (errDist >= minErrDist) errors.SynErr(la.line, la.col, n);
		errDist = 0;
	}

	public void SemErr (String msg) {
		if (errDist >= minErrDist) errors.Error(t.line, t.col, msg);
		errDist = 0;
	}
	
	void Get () {
		for (;;) {
			t = la;
			la = scanner.Scan();
			if (la.kind <= maxT) { ++errDist; break; }

			if (la.kind == 57) {
				CompilerOptions.listCode = la.val.charAt(2) == '+'; 
			}
			if (la.kind == 58) {
				CompilerOptions.optimize = la.val.charAt(2) == '+'; 
			}
			if (la.kind == 59) {
				SymbolTable.dumpAll(); 
			}
			if (la.kind == 60) {
			}
			if (la.kind == 61) {
				CompilerOptions.showMessages = la.val.charAt(2) == '+'; 
			}
			if (la.kind == 62) {
				CompilerOptions.printAllocatedRegisters(); 
			}
			if (la.kind == 63) {
			}
			la = t;
		}
	}
	
	void Expect (int n) {
		if (la.kind==n) Get(); else { SynErr(n); }
	}
	
	boolean StartOf (int s) {
		return set[s][la.kind];
	}
	
	void ExpectWeak (int n, int follow) {
		if (la.kind == n) Get();
		else {
			SynErr(n);
			while (!StartOf(follow)) Get();
		}
	}
	
	boolean WeakSeparator (int n, int syFol, int repFol) {
		boolean[] s = new boolean[maxT+1];
		if (la.kind == n) { Get(); return true; }
		else if (StartOf(repFol)) return false;
		else {
			for (int i=0; i <= maxT; i++) {
				s[i] = set[syFol][i] || set[repFol][i] || set[0][i];
			}
			SynErr(n);
			while (!s[la.kind]) Get();
			return StartOf(syFol);
		}
	}
	
	void gcl() {
		semantic.startCode();  SymbolTable scope = SymbolTable.currentScope(); 
		while (!(la.kind == 0 || la.kind == 4)) {SynErr(57); Get();}
		module(scope);
		while (la.kind == 4) {
			scope = scope.openScope(true); 
			while (!(la.kind == 0 || la.kind == 4)) {SynErr(58); Get();}
			module(scope);
		}
		semantic.finishCode(); 
	}

	void module(SymbolTable scope) {
		Identifier id; 
		Expect(4);
		Expect(1);
		id = new Identifier(currentToken().spelling()); semantic.declareModule(scope, id); 
		definitionPart(scope);
		if (la.kind == 5) {
			Get();
			SymbolTable privateScope = scope.openScope(false); semantic.declarePrivateScope(scope); 
			block(privateScope);
		}
		Expect(6);
	}

	void definitionPart(SymbolTable scope) {
		while (StartOf(1)) {
			while (!(StartOf(2))) {SynErr(59); Get();}
			definition(scope);
			ExpectWeak(9, 3);
		}
	}

	void block(SymbolTable scope) {
		definitionPart(scope);
		while (!(la.kind == 0 || la.kind == 7)) {SynErr(60); Get();}
		Expect(7);
		statementPart(scope);
		Expect(8);
	}

	void statementPart(SymbolTable scope) {
		while (!(StartOf(4))) {SynErr(61); Get();}
		statement(scope);
		ExpectWeak(9, 5);
		while (StartOf(6)) {
			while (!(StartOf(4))) {SynErr(62); Get();}
			statement(scope);
			ExpectWeak(9, 5);
		}
	}

	void definition(SymbolTable scope) {
		if (StartOf(7)) {
			variableDefinition(scope, ParameterKind.NOT_PARAM);
		} else if (la.kind == 11) {
			constantDefinition(scope);
		} else if (la.kind == 15) {
			typeDefinition(scope);
		} else if (la.kind == 19) {
			procedureDefinition(scope);
		} else SynErr(63);
	}

	void statement(SymbolTable scope) {
		switch (la.kind) {
		case 29: {
			emptyStatement();
			break;
		}
		case 30: {
			readStatement(scope);
			break;
		}
		case 31: {
			writeStatement(scope);
			break;
		}
		case 1: {
			assignOrCallStatement(scope);
			break;
		}
		case 33: {
			ifStatement(scope);
			break;
		}
		case 35: {
			doStatement(scope);
			break;
		}
		case 37: {
			forStatement(scope);
			break;
		}
		default: SynErr(64); break;
		}
	}

	void variableDefinition(SymbolTable scope, ParameterKind kindOfParam) {
		TypeDescriptor type; Identifier id; 
		type = type(scope);
		Expect(1);
		id = new Identifier(currentToken().spelling());
		semantic.declareVariable(scope, type, id, kindOfParam);
		
		while (la.kind == 10) {
			Get();
			Expect(1);
			id = new Identifier(currentToken().spelling());
			semantic.declareVariable(scope, type, id, kindOfParam);
			
		}
	}

	void constantDefinition(SymbolTable scope) {
		Expression expr; Identifier id; 
		Expect(11);
		Expect(1);
		id = new Identifier(currentToken().spelling()); 
		Expect(12);
		expr = constant(scope);
		semantic.declareConstant(scope, id, expr); 
	}

	void typeDefinition(SymbolTable scope) {
		Identifier id; TypeDescriptor type;
		Expect(15);
		type = type(scope);
		Expect(1);
		id = new Identifier(currentToken().spelling()); 
		semantic.declareType(scope, id, type); 
	}

	void procedureDefinition(SymbolTable scope) {
		Identifier tupleID; Identifier procID; 
		Expect(19);
		Expect(1);
		tupleID = new Identifier(currentToken().spelling()); 
		Expect(25);
		Expect(1);
		procID = new Identifier(currentToken().spelling()); 
		block(scope);
	}

	TypeDescriptor  type(SymbolTable scope) {
		TypeDescriptor  result;
		result = noType; 
		if (la.kind == 1 || la.kind == 13 || la.kind == 14) {
			result = typeSymbol(scope);
			if (la.kind == 26 || la.kind == 27) {
				if (la.kind == 26) {
					result = arrayType(result, scope);
				} else {
					result = rangeType(result, scope);
				}
			}
		} else if (la.kind == 16) {
			result = tupleType(scope);
		} else SynErr(65);
		return result;
	}

	ConstantExpression  constant(SymbolTable scope) {
		ConstantExpression  result;
		Expression expr; 
		expr = expression(scope);
		result = expr.expectConstant(expr, err); 
		return result;
	}

	Expression  expression(SymbolTable scope) {
		Expression  left;
		Expression right; 
		left = andExpr(scope);
		while (la.kind == 41) {
			Get();
			right = andExpr(scope);
			left = semantic.booleanExpression(left, BooleanOperator.OR, right); 
		}
		return left;
	}

	TypeDescriptor  typeSymbol(SymbolTable scope) {
		TypeDescriptor  result;
		Identifier id; result = null; SemanticItem typeDef; 
		if (la.kind == 13) {
			Get();
			result = integerType; 
		} else if (la.kind == 14) {
			Get();
			result = booleanType; 
		} else if (la.kind == 1) {
			typeDef = qualifiedIdentifier(scope);
			id = new Identifier(currentToken().spelling());
			typeDef = semantic.semanticValue(scope, id); 
			result = typeDef.expectType(err);
		} else SynErr(66);
		return result;
	}

	ArrayType  arrayType(TypeDescriptor baseType, SymbolTable scope) {
		ArrayType  result;
		
		SemanticItem subscriptType; ArrayCarrier carrier = new ArrayCarrier();
		Expect(26);
		Expect(17);
		subscriptType = typeSymbol(scope);
		carrier.push(subscriptType.expectType(err), err); 
		Expect(18);
		while (la.kind == 17) {
			Get();
			subscriptType = typeSymbol(scope);
			carrier.push(subscriptType.expectType(err), err); 
			Expect(18);
		}
		result = semantic.buildArray(baseType, carrier, err); 
		return result;
	}

	TypeDescriptor  rangeType(TypeDescriptor baseType, SymbolTable scope) {
		TypeDescriptor  result;
		ConstantExpression lowBound; ConstantExpression highBound; 
		Expect(27);
		Expect(17);
		lowBound = constant(scope);
		Expect(28);
		highBound = constant(scope);
		Expect(18);
		result = semantic.buildRange(baseType, lowBound, highBound); 
		return result;
	}

	TupleType  tupleType(SymbolTable scope) {
		TupleType  result;
		result = null; TypeList carrier = new TypeList(); 
		Expect(16);
		Expect(17);
		if (la.kind == 19) {
			carrier = justProcs(carrier, scope);
		} else if (la.kind == 1 || la.kind == 13 || la.kind == 14) {
			carrier = fieldsAndProcs(carrier, scope);
		} else SynErr(67);
		Expect(18);
		result = new TupleType(carrier); 
		return result;
	}

	SemanticItem  qualifiedIdentifier(SymbolTable scope) {
		SemanticItem  result;
		Expect(1);
		Identifier id = new Identifier(currentToken().spelling()); result = semantic.semanticValue(scope, id); 
		if (la.kind == 6) {
			Get();
			Expect(1);
			Identifier modulesID = new Identifier(currentToken().spelling()); 
			result = semantic.semanticValue(scope, id, modulesID); 
		}
		return result;
	}

	TypeList  justProcs(TypeList currentCarrier, SymbolTable scope) {
		TypeList  carrier;
		Procedure proc; carrier = currentCarrier; 
		proc = procedureDeclaration(scope);
		carrier.enterProc(proc); 
		while (la.kind == 10) {
			Get();
			proc = procedureDeclaration(scope);
			carrier.enterProc(proc); 
		}
		return carrier;
	}

	TypeList  fieldsAndProcs(TypeList currentCarrier, SymbolTable scope) {
		TypeList  carrier;
		TypeDescriptor type; Identifier id; carrier = currentCarrier; 
		type = typeSymbol(scope);
		Expect(1);
		id = new Identifier(currentToken().spelling()); carrier.enter(type, id);
		carrier = moreFieldsAndProcs(carrier, scope);
		return carrier;
	}

	Procedure  procedureDeclaration(SymbolTable scope) {
		Procedure  proc;
		Identifier id;
		Expect(19);
		Expect(1);
		id = new Identifier(currentToken().spelling());  proc = semantic.declareProcedure(scope, id); 
		paramPart(scope);
		semantic.endDeclareProcedure(); 
		return proc;
	}

	TypeList  moreFieldsAndProcs(TypeList currentCarrier, SymbolTable scope) {
		TypeList  carrier;
		TypeDescriptor type; Identifier id; carrier = currentCarrier; 
		if (la.kind == 10 || la.kind == 19) {
			if (la.kind == 10) {
				Get();
				type = typeSymbol(scope);
				Expect(1);
				id = new Identifier(currentToken().spelling()); carrier.enter(type, id);
				carrier = moreFieldsAndProcs(carrier, scope);
			} else {
				if (la.kind == 19) {
					carrier = justProcs(carrier, scope);
				}
			}
		}
		return carrier;
	}

	void paramPart(SymbolTable scope) {
		Expect(20);
		if (la.kind == 22 || la.kind == 23) {
			paramDefinition(scope);
			while (la.kind == 9) {
				Get();
				paramDefinition(scope);
			}
		}
		Expect(21);
	}

	void paramDefinition(SymbolTable scope) {
		if (la.kind == 22) {
			Get();
		} else if (la.kind == 23) {
			Get();
		} else SynErr(68);
		variableDefinition(scope, ParameterKind.NOT_PARAM);
	}

	void callStatement(SymbolTable scope) {
		Expression exp; 
		Expect(24);
		Expect(1);
		argumentList(scope);
	}

	void argumentList(SymbolTable scope) {
		Expect(20);
		if (StartOf(8)) {
			Expression exp; ExpressionList tupleFields = new ExpressionList(); 
			exp = expression(scope);
			while (la.kind == 10) {
				Get();
				exp = expression(scope);
			}
		}
		Expect(21);
	}

	void assignOrCallStatement(SymbolTable scope) {
		Expression exp; 
		exp = variableAccessEtc(scope);
		if (la.kind == 10 || la.kind == 32) {
			assignStatement(scope, exp);
		} else if (la.kind == 24) {
			callStatement(scope);
		} else SynErr(69);
	}

	Expression  variableAccessEtc(SymbolTable scope) {
		Expression  result;
		SemanticItem workValue; 
		workValue = qualifiedIdentifier(scope);
		result = workValue.expectExpression(err); 
		result = subsAndCompons(result, scope);
		return result;
	}

	void assignStatement(SymbolTable scope, Expression left) {
		AssignRecord expressions = new AssignRecord(); Expression exp = left; 
		expressions.left(exp); 
		while (la.kind == 10) {
			Get();
			exp = variableAccessEtc(scope);
			expressions.left(exp); 
		}
		Expect(32);
		exp = expression(scope);
		expressions.right(exp); 
		while (la.kind == 10) {
			Get();
			exp = expression(scope);
			expressions.right(exp); 
		}
		semantic.parallelAssign(expressions); 
	}

	void emptyStatement() {
		Expect(29);
	}

	void readStatement(SymbolTable scope) {
		Expression exp; 
		Expect(30);
		exp = variableAccessEtc(scope);
		semantic.readVariable(exp); 
		while (la.kind == 10) {
			Get();
			exp = variableAccessEtc(scope);
			semantic.readVariable(exp); 
		}
	}

	void writeStatement(SymbolTable scope) {
		Expect(31);
		writeItem(scope);
		while (la.kind == 10) {
			Get();
			writeItem(scope);
		}
		semantic.genEol(); 
	}

	void ifStatement(SymbolTable scope) {
		GCRecord ifRecord; 
		Expect(33);
		ifRecord = semantic.startIf(); 
		guardedCommandList(scope, ifRecord );
		Expect(34);
		semantic.endIf(ifRecord); 
	}

	void doStatement(SymbolTable scope) {
		GCRecord doRecord; 
		Expect(35);
		doRecord = semantic.startDo(); 
		guardedCommandList(scope, doRecord );
		Expect(36);
	}

	void forStatement(SymbolTable scope) {
		Expression exp; int startLabel;
		Expect(37);
		exp = variableAccessEtc(scope);
		Expect(38);
		startLabel =  semantic.startFor(exp); 
		statementPart(scope);
		Expect(39);
		semantic.endFor(exp, startLabel); 
	}

	void writeItem(SymbolTable scope) {
		Expression exp; 
		if (StartOf(8)) {
			exp = expression(scope);
			semantic.writeExpression(exp); 
		} else if (la.kind == 3) {
			Get();
			semantic.writeStringConstant(new StringConstant(currentToken().spelling())); 
		} else SynErr(70);
	}

	void guardedCommandList(SymbolTable scope, GCRecord ifRecord) {
		guardedCommand(scope, ifRecord);
		while (la.kind == 40) {
			Get();
			guardedCommand(scope, ifRecord);
		}
	}

	void guardedCommand(SymbolTable scope, GCRecord  ifRecord ) {
		Expression expr; 
		expr = expression(scope);
		semantic.ifTest(expr, ifRecord); 
		Expect(38);
		statementPart(scope);
		semantic.elseIf(ifRecord); 
	}

	Expression  andExpr(SymbolTable scope) {
		Expression  left;
		Expression right; 
		left = relationalExpr(scope);
		while (la.kind == 42) {
			Get();
			right = relationalExpr(scope);
			left = semantic.booleanExpression(left, BooleanOperator.AND, right); 
		}
		return left;
	}

	Expression  relationalExpr(SymbolTable scope) {
		Expression  left;
		Expression right; RelationalOperator op; 
		left = simpleExpr(scope);
		if (StartOf(9)) {
			op = relationalOperator();
			right = simpleExpr(scope);
			left = semantic.compareExpression(left, op, right); 
		}
		return left;
	}

	Expression  simpleExpr(SymbolTable scope) {
		Expression  left;
		Expression right; AddOperator op; left = null; 
		if (StartOf(10)) {
			if (la.kind == 43) {
				Get();
			}
			left = term(scope);
		} else if (la.kind == 44) {
			Get();
			left = term(scope);
			left = semantic.negateExpression(left); 
		} else SynErr(71);
		while (la.kind == 43 || la.kind == 44) {
			op = addOperator();
			right = term(scope);
			left = semantic.addExpression(left, op, right); 
		}
		return left;
	}
